# TradingAgents

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  tickers.txt
.github/workflows/: scheduled-analysis.yml
.planning/: config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/resolved/: syntax-error-agent-tracker.md
docs/diagrams/: agent-classes.puml  agent-flow.puml  architecture.puml  components.puml  data-flow.puml  deployment.puml  state-machine.puml
scripts/: run_scheduled_analysis.py  upload_existing_reports.py
tests/: __init__.py
tests/storage/: test_config.py  test_local_backend.py  test_r2_backend.py  test_service.py
tradingagents/: default_config.py  logging_config.py
tradingagents/agents/: __init__.py
tradingagents/agents/base/: __init__.py  analyst.py  analyst_configs.py  debater.py  (+9 more)
tradingagents/backtracking/: __init__.py  agent_tracker.py  performance.py  storage.py
tradingagents/config/: __init__.py  models.py
tradingagents/dataflows/: alpha_vantage_common.py  alpha_vantage_indicator.py  alpha_vantage_news.py  gemini.py  google.py  googlenews_utils.py  interface.py  local.py  utils.py  y_finance.py  yfin_utils.py
tradingagents/graph/: conditional_logic.py  propagation.py  reflection.py  setup.py  trading_graph.py
tradingagents/observability/: __init__.py
tradingagents/portfolio/: __init__.py  google_sheets.py  models.py
tradingagents/storage/: __init__.py  base.py  exceptions.py  pdf.py  service.py  tldr.py
(+43 files in other folders)
